<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindPrimeActivity">

    <Button
        android:id="@+id/primeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="primeButtonClicked"
        android:text="@string/primes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/latestNumValue"
        app:layout_constraintStart_toStartOf="@+id/currentNumView"
        app:layout_constraintTop_toBottomOf="@+id/latestNumView"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/currentNumView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <TextView
        android:id="@+id/latestNumValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/latestNumView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/latestNumView"
        app:layout_constraintTop_toTopOf="@+id/latestNumView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/latestNumView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/latestNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/currentNumView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentNumView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/currentNumValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/currentNumView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/currentNumView"
        app:layout_constraintTop_toTopOf="@+id/currentNumView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/terminateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="terminateThread"
        android:text="@string/terminate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/primeBtn"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/primeBtn"
        app:layout_constraintTop_toBottomOf="@+id/primeBtn"
        app:layout_constraintVertical_bias="0.04" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pacifier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/terminateBtn"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@+id/terminateBtn"
        app:layout_constraintTop_toBottomOf="@+id/terminateBtn"
        app:layout_constraintVertical_bias="0.088" />

</androidx.constraintlayout.widget.ConstraintLayout>